fixed spacing between side nav on the splace page

--- a/assets/css/mydesignmentality.css
+++ b/assets/css/mydesignmentality.css
@@ -80,6 +80,17 @@
   color: white !important;
 }
 
+.sidenav-flex {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: space-around;
+}
+
+.sidenav-item {
+  margin-top: 15px;
+  margin-botton: 15px;
+}
 @media only screen and (max-width: 320px) {
 
   .table-content {
